Добавляет секцию категорий

--- a/source/index.html
+++ b/source/index.html
@@ -266,7 +266,7 @@
               <form class="search__form" method="post" action="#">
                 <label>
                   <span class="visually-hidden">Введите vin код.</span>
-                  <input class="search__field" type="search" name="search__input" placeholder="Введите vin код автмобиля" required>
+                  <input class="search__field" type="search" name="search__input" placeholder="Введите vin код автомобиля" required>
                 </label>
                 <button class="search__button" type="submit">
                   <span class="search__button-text">Искать</span>
@@ -309,6 +309,34 @@
                 </button>
               </form>
             </div>
+          </div>
+        </section>
+
+        <section class="categories">
+          <h3 class="visually-hidden">Перейти в категорию товаров.</h3>
+          <div class="categories-card categories-card--chemistry">
+            <h4 class="categories-card__title">Автохимия</h4>
+            <a class="categories-card__link" href="#">Перейти ></a>
+          </div>
+          <div class="categories-card categories-card--tyres">
+            <h4 class="categories-card__title">Шины и диски</h4>
+            <a class="categories-card__link" href="#">Перейти ></a>
+          </div>
+          <div class="categories-card categories-card--tools">
+            <h4 class="categories-card__title">Инструменты</h4>
+            <a class="categories-card__link" href="#">Перейти ></a>
+          </div>
+          <div class="categories-card categories-card--parts">
+            <h4 class="categories-card__title">Запчасти на ТО</h4>
+            <a class="categories-card__link" href="#">Перейти ></a>
+          </div>
+          <div class="categories-card categories-card--electronics">
+            <h4 class="categories-card__title">Электроника</h4>
+            <a class="categories-card__link" href="#">Перейти ></a>
+          </div>
+          <div class="categories-card categories-card--other">
+            <h4 class="categories-card__title">Аксессуары<br>и другое</h4>
+            <a class="categories-card__link" href="#">Перейти ></a>
           </div>
         </section>
 
