Добавляет секцию категорий

--- a/source/index.html
+++ b/source/index.html
@@ -340,6 +340,10 @@
           </div>
         </section>
 
+        <section class="popular">
+          
+        </section>
+
       </main>
     </div>
 
