Добавляет интерактивность иконкам избранное

--- a/source/index.html
+++ b/source/index.html
@@ -366,7 +366,8 @@
             <div class="popular__slider-wrapper">
             <ul class="popular__list2">
               <li class="popular__card card">
-                <button class="card__button-likes" type="button" title="Добавить в избранное">
+                <span class="card__type not-display">Sale</span>
+                <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <img class="card__img" src="../img/goods1.png" width="230" height="215" alt="">
@@ -384,8 +385,8 @@
                 </button>
               </li>
               <li class="popular__card card">
-                <span class="card__type">Распродажа</span>
-                <button class="card__button-likes" type="button" title="Добавить в избранное">
+                <span class="card__type">Sale</span>
+                <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="card__icon-winter"></span>
@@ -404,7 +405,8 @@
                 </button>
               </li>
               <li class="popular__card card">
-                <button class="card__button-likes" type="button"title="Добавить в избранное">
+                <span class="card__type not-display">Sale</span>
+                <button class="card__buttonlikes" type="button"title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <img class="card__img" src="../img/goods3.png" width="232" height="174" alt="">
@@ -412,7 +414,7 @@
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
                 <p class="card__name">Фара Nokian 2025</p>
-                <p class="card__price">680 ₽</p>
+                <p class="card__price">5 980 ₽</p>
                 <p class="card__not-available not-display">нет в наличии</p>
                 <button class="card__button-message not-display" type="submit">
                   Сообщить о поступлении
@@ -422,8 +424,8 @@
                 </button>
               </li>
               <li class="popular__card card">
-                <span class="card__type">Распродажа</span>
-                <button class="card__button-likes" type="button" title="Добавить в избранное">
+                <span class="card__type">Sale</span>
+                <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="card__icon-summer"></span>
@@ -442,15 +444,16 @@
                 </button>
               </li>
               <li class="popular__card card">
-                <button class="card__button-likes" type="button"title="Добавить в избранное">
+                <span class="card__type">Sale</span>
+                <button class="card__buttonlikes" type="button"title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <img class="card__img" src="../img/goods3.png" width="232" height="174" alt="">
                 <button class="card__button-viewing" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
-                <p class="card__name">Фара Nokian 2025</p>
-                <p class="card__price">680 ₽</p>
+                <p class="card__name">Фара ВАЗ 2114</p>
+                <p class="card__price">1 680 ₽</p>
                 <p class="card__not-available not-display">нет в наличии</p>
                 <button class="card__button-message not-display" type="submit">
                   Сообщить о поступлении
@@ -460,7 +463,8 @@
                 </button>
               </li>
               <li class="popular__card card">
-                <button class="card__button-likes" type="button" title="Добавить в избранное">
+                <span class="card__type not-display">Sale</span>
+                <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <img class="card__img" src="../img/goods1.png" width="230" height="215" alt="">
@@ -478,8 +482,8 @@
                 </button>
               </li>
               <li class="popular__card card">
-                <span class="card__type">Распродажа</span>
-                <button class="card__button-likes" type="button" title="Добавить в избранное">
+                <span class="card__type">Sale</span>
+                <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <span class="card__icon-winter"></span>
@@ -498,20 +502,21 @@
                 </button>
               </li>
               <li class="popular__card card">
-                <button class="card__button-likes" type="button" title="Добавить в избранное">
+                <span class="card__type not-display">Sale</span>
+                <button class="card__buttonlikes" type="button" title="Добавить в избранное">
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
-                <img class="card__img" src="../img/goods1.png" width="230" height="215" alt="">
-                <button class="card__button-viewing" type="button">
+                <img class="card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="card__button-viewing card__button-viewing--none" type="button">
                   <span class="card__button-viewing-text">быстрый просмотр</span>
                 </button>
-                <p class="card__name">Ремень</p>
-                <p class="card__price">440 ₽</p>
-                <p class="card__not-available not-display">нет в наличии</p>
-                <button class="card__button-message not-display" type="submit">
+                <p class="card__name">Шина 205/80 R16 105 Goodyear RF Power</p>
+                <p class="card__price not-display">8 440 ₽</p>
+                <p class="card__not-available">нет в наличии</p>
+                <button class="card__button-message" type="submit">
                   Сообщить о поступлении
                 </button>
-                <button class="card__button" type="button" title="Добавить в корзину">
+                <button class="card__button not-display" type="button" title="Добавить в корзину">
                   <span class="visually-hidden" >Добавить в корзину.</span>
                 </button>
               </li>
@@ -538,5 +543,6 @@
   <script src="js/search.js"></script>
   <script src="js/popular.js"></script>
   <script src="js/popular-slider.js"></script>
+  <script src="js/like.js"></script>
   </body>
 </html>
