--- a/source/index.html
+++ b/source/index.html
@@ -531,6 +531,13 @@
           </div>
         </section>
 
+        <section class="sale">
+          <h3 class="visually-hidden">Sale до 50% на все колёса.</h3>
+          <button class="sale__button" type="button">
+            <img src="img/sale.png" width="1170" height="165" alt="">
+          </button>
+        </section>
+
       </main>
     </div>
 
