--- a/source/index.html
+++ b/source/index.html
@@ -538,6 +538,197 @@
           </button>
         </section>
 
+        <section class="with" id="with">
+          <h3 class="with__title">С этим товаром покупают</h3>
+          <ul class="with__list">
+            <li class="with__item">
+              <a class="with__link" href="#with">запчасти</a>
+            </li>
+            <li class="with__item">
+              <a class="with__link" href="#with">автохимия</a>
+            </li>
+            <li class="with__item">
+              <a class="with__link with__link--current" href="#with">шины и диски</a>
+            </li>
+            <li class="with__item">
+              <a class="with__link" href="#with">автоэлектроника</a>
+            </li>
+            <li class="with__item">
+              <a class="with__link" href="#with">инструменты</a>
+            </li>
+            <li class="with__link">
+              <a class="with__link" href="#with">аксессуары и другое</a>
+            </li>
+          </ul>
+          <div class="with__slider">
+            <button class="with__slider-prev-button" type="button" title="Назад">
+              <span class="visually-hidden">Кнопка назад.</span>
+            </button>
+            <div class="with__slider-wrapper">
+            <ul class="with__list2">
+              <li class="with__card with-card">
+                <span class="with-card__type">Sale</span>
+                <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 205/80 R16 104Q Misha RF Power Grum</p>
+                <p class="with-card__price not-display">440 ₽</p>
+                <p class="with-card__not-available">нет в наличии</p>
+                <button class="with-card__button-message" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button not-display" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+              <li class="with__card with-card">
+                <span class="with-card__type not-display">Sale</span>
+                <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <span class="with-card__icon-winter"></span>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 205/80 R16 104Q Misha RF Power Grum</p>
+                <p class="with-card__price">11 680 ₽</p>
+                <p class="with-card__not-available not-display">нет в наличии</p>
+                <button class="with-card__button-message not-display" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+              <li class="with__card with-card">
+                <span class="with-card__type">Sale</span>
+                <button class="with__card__buttonlikes" type="button"title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 205/80 R16 104Q Misha RF Power Grum</p>
+                <p class="with-card__price not-display">5 980 ₽</p>
+                <p class="with-card__not-available">нет в наличии</p>
+                <button class="with-card__button-message" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button not-display" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+              <li class="with__card with-card">
+                <span class="with-card__type not-display">Sale</span>
+                <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <span class="with-card__icon-summer"></span>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 245/60 R18 105T Contyther Crosh Conta...</p>
+                <p class="with-card__price not-display">12 440 ₽</p>
+                <p class="with-card__not-available">нет в наличии</p>
+                <button class="with-card__button-message" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button not-display" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+              <li class="with__card with-card">
+                <span class="with-card__type">Sale</span>
+                <button class="with__card__buttonlikes" type="button"title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 205/80 R16 105 Goodyear RF Powe</p>
+                <p class="with-card__price">11 680 ₽</p>
+                <p class="with-card__not-available not-display">нет в наличии</p>
+                <button class="with-card__button-message not-display" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+              <li class="with__card with-card">
+                <span class="with-card__type not-display">Sale</span>
+                <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 205/80 R16 105 Goodyear RF Powe</p>
+                <p class="with-card__price">11 680 ₽</p>
+                <p class="with-card__not-available not-display">нет в наличии</p>
+                <button class="with-card__button-message not-display" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+              <li class="with__card with-card">
+                <span class="with-card__type">Sale</span>
+                <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <span class="with-card__icon-winter"></span>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 205/80 R16 104Q Misha RF Power Grum</p>
+                <p class="with-card__price">11 680 ₽</p>
+                <p class="with-card__not-available not-display">нет в наличии</p>
+                <button class="with-card__button-message not-display" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+              <li class="with__card with-card">
+                <span class="with-card__type not-display">Sale</span>
+                <button class="with__card__buttonlikes" type="button" title="Добавить в избранное">
+                  <span class="visually-hidden" >Добавить в избранное.</span>
+                </button>
+                <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
+                <button class="with-card__button-viewing card__button-viewing--none" type="button">
+                  <span class="with-card__button-viewing-text">быстрый просмотр</span>
+                </button>
+                <p class="with-card__name">Шина 205/80 R16 105 Goodyear RF Power</p>
+                <p class="with-card__price not-display">11 680 ₽</p>
+                <p class="with-card__not-available">нет в наличии</p>
+                <button class="with-card__button-message" type="submit">
+                  Сообщить о поступлении
+                </button>
+                <button class="with-card__button not-display" type="button" title="Добавить в корзину">
+                  <span class="visually-hidden" >Добавить в корзину.</span>
+                </button>
+              </li>
+            </ul>
+            </div>
+            <button class="with__slider-next-button" type="button" title="Вперёд">
+              <span class="visually-hidden">Кнопка вперёд.</span>
+            </button>
+          </div>
+        </section>
+
       </main>
     </div>
 
@@ -550,6 +741,9 @@
   <script src="js/search.js"></script>
   <script src="js/popular.js"></script>
   <script src="js/popular-slider.js"></script>
-  <script src="js/like.js"></script>
+  <script src="js/popular-like.js"></script>
+  <script src="js/with.js"></script>
+  <script src="js/with-slider.js"></script>
+  <script src="js/with-like.js"></script>
   </body>
 </html>
