Добавляет секцию with

--- a/source/index.html
+++ b/source/index.html
@@ -572,11 +572,11 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
-                <button class="with-card__button-viewing" type="button">
+                <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
                 <p class="with-card__name">Шина 205/80 R16 104Q Misha RF Power Grum</p>
-                <p class="with-card__price not-display">440 ₽</p>
+                <p class="with-card__price not-display">11 860 ₽</p>
                 <p class="with-card__not-available">нет в наличии</p>
                 <button class="with-card__button-message" type="submit">
                   Сообщить о поступлении
@@ -611,7 +611,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
-                <button class="with-card__button-viewing" type="button">
+                <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
                 <p class="with-card__name">Шина 205/80 R16 104Q Misha RF Power Grum</p>
@@ -708,7 +708,7 @@
                   <span class="visually-hidden" >Добавить в избранное.</span>
                 </button>
                 <img class="with-card__img" src="../img/goods4.png" width="151" height="181" alt="">
-                <button class="with-card__button-viewing card__button-viewing--none" type="button">
+                <button class="with-card__button-viewing with-card__button-viewing--none" type="button">
                   <span class="with-card__button-viewing-text">быстрый просмотр</span>
                 </button>
                 <p class="with-card__name">Шина 205/80 R16 105 Goodyear RF Power</p>
