Улучшает логику кнопок в слайдерах

--- a/source/index.html
+++ b/source/index.html
@@ -526,7 +526,7 @@
               <span class="visually-hidden">Кнопка вперёд.</span>
             </button>
             <button class="popular__slider-more-button" type="button">
-              <span class="popular__slider-text-button">Смотреть еще</span>
+              <span class="popular__slider-text-button not">Смотреть еще</span>
             </button>
           </div>
         </section>
