Добавляет количество лайков в избранном

--- a/source/index.html
+++ b/source/index.html
@@ -43,6 +43,7 @@
             <ul class="nav__list-user nav-user">
               <li class="nav-user__item">
                 <a class="nav-user__link" href="#">
+                  <span class="nav-user__likes">2</span>
                   <span class="visually-hidden">Избранное.</span>
                 </a>
               </li>
