--- a/source/index.html
+++ b/source/index.html
@@ -729,8 +729,88 @@
             </button>
           </div>
         </section>
-
       </main>
+
+      <footer class="footer">
+        <section class="footer__subscription">
+          <h3 class="footer__subscription-title">Подпишитесь на нашу рассылку<br>и узнавайте об акциях быстрее</h3>
+          <form class="footer__subscription-form" action="#" method="post">
+            <label>
+              <input class="footer__subscription-field" type="email" name="mail" placeholder="Введите ваш e-mail:" autocomplete="on" required>
+            </label>
+            <button class="footer__subscription-button" type="submit">Отправить</button>
+          </form>
+          <p class="footer__subscription-name">Интернет-магазин автозапчастей</p>
+        </section>
+        <section class="footer__info info">
+          <h3 class="visually-hidden">Ссылки на полезную информацию о сайте.</h3>
+          <div class="info__col">
+            <h4 class="info__col-name">Информация</h4>
+            <ul class="info__col-list">
+              <li class="info__col-item">
+                <a class="info__col-link">О компании</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Контакты</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Реквизиты</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Магазины</a>
+              </li>
+            </ul>
+          </div>
+          <div class="info__col">
+            <h4 class="info__col-name">Сервисный центр</h4>
+            <ul class="info__col-list">
+              <li class="info__col-item">
+                <a class="info__col-link">Доставка и самовывоз</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Оплата</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Возврат-обмен</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Новости</a>
+              </li>
+            </ul>
+          </div>
+          <div class="info__col">
+            <h4 class="info__col-name">Интернет-магазин</h4>
+            <ul class="info__col-list">
+              <li class="info__col-item">
+                <a class="info__col-link">Доставка и самовывоз</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Оплата</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Возврат-обмен</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Новости</a>
+              </li>
+            </ul>
+          </div>
+          <div class="info__col">
+            <h4 class="info__col-name empty"></h4>
+            <ul class="info__col-list">
+              <li class="info__col-item">
+                <a class="info__col-link">Акции</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Договор оферты</a>
+              </li>
+              <li class="info__col-item">
+                <a class="info__col-link">Политика обработки<br>персональных данных</a>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </footer>
     </div>
 
   <script src="js/nav-goods.js"></script>
