--- a/source/index.html
+++ b/source/index.html
@@ -742,22 +742,22 @@
           </form>
           <p class="footer__subscription-name">Интернет-магазин автозапчастей</p>
         </section>
-        <section class="footer__info info">
+        <section class="footer__info info" id="footer">
           <h3 class="visually-hidden">Ссылки на полезную информацию о сайте.</h3>
           <div class="info__col">
             <h4 class="info__col-name">Информация</h4>
             <ul class="info__col-list">
               <li class="info__col-item">
-                <a class="info__col-link">О компании</a>
+                <a class="info__col-link" href="#footer">О компании</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Контакты</a>
+                <a class="info__col-link" href="#footer">Контакты</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Реквизиты</a>
+                <a class="info__col-link" href="#footer">Реквизиты</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Магазины</a>
+                <a class="info__col-link" href="#footer">Магазины</a>
               </li>
             </ul>
           </div>
@@ -765,16 +765,16 @@
             <h4 class="info__col-name">Сервисный центр</h4>
             <ul class="info__col-list">
               <li class="info__col-item">
-                <a class="info__col-link">Доставка и самовывоз</a>
+                <a class="info__col-link"href="#footer" >Доставка и самовывоз</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Оплата</a>
+                <a class="info__col-link" href="#footer">Оплата</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Возврат-обмен</a>
+                <a class="info__col-link"href="#footer" >Возврат-обмен</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Новости</a>
+                <a class="info__col-link"href="#footer" >Новости</a>
               </li>
             </ul>
           </div>
@@ -782,16 +782,16 @@
             <h4 class="info__col-name">Интернет-магазин</h4>
             <ul class="info__col-list">
               <li class="info__col-item">
-                <a class="info__col-link">Доставка и самовывоз</a>
+                <a class="info__col-link" href="#footer">Доставка и самовывоз</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Оплата</a>
+                <a class="info__col-link" href="#footer">Оплата</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Возврат-обмен</a>
+                <a class="info__col-link"href="#footer" >Возврат-обмен</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Новости</a>
+                <a class="info__col-link" href="#footer">Новости</a>
               </li>
             </ul>
           </div>
@@ -799,13 +799,13 @@
             <h4 class="info__col-name empty"></h4>
             <ul class="info__col-list">
               <li class="info__col-item">
-                <a class="info__col-link">Акции</a>
+                <a class="info__col-link" href="#footer">Акции</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Договор оферты</a>
+                <a class="info__col-link" href="#footer">Договор оферты</a>
               </li>
               <li class="info__col-item">
-                <a class="info__col-link">Политика обработки<br>персональных данных</a>
+                <a class="info__col-link"href="#footer" >Политика обработки<br>персональных данных</a>
               </li>
             </ul>
           </div>
