Добавляет фокус в навигации

--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
           <div class="nav__wrapper">
             <ul class="nav__list nav-list">
               <li class="nav-list__item">
-                <a class="nav-list__link">
+                <a class="nav-list__link" href="#">
                   Магазины
                 </a>
               </li>
@@ -48,8 +48,7 @@
                 </a>
               </li>
               <li class="nav-user__item">
-                <a class="nav-user__link" href="#">
-
+                <a class="nav-user__link " href="#">
                   <span class="visually-hidden">Вход/регистрация.</span>
                 </a>
               </li>
@@ -535,7 +534,7 @@
         <section class="sale">
           <h3 class="visually-hidden">Sale до 50% на все колёса.</h3>
           <button class="sale__button" type="button">
-            <img src="img/sale.png" width="1170" height="165" alt="">
+            <img class="sale__img" src="img/sale.png" width="1170" height="165" alt="">
           </button>
         </section>
 
